--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
 ## TODO
 * Help contrast
+* One superclass color
 * Contrast : 0 / NA (empty cells)
 * Barplot hex norm : 0-1
+* Boxplot, Star : empty cells -> NA
 * Fix names : tous ne s'affichent pas
 * Msgbox pour nom des individus
 * SVG save
@@ -13,6 +15,7 @@
 * Energy, Kaski-Lagus
 * Train options
 * isolate train in var choice
+* pas d'update nom de variable à train si mêmes variables
 
 ## Wishlist
 * U-matrix distance
