--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@
 * line : NA -> empty
 * 0-sd variables crash
 * No train when no variables selected
+* Crash when duplicate rownames in data import (when rownames checked)
 
 ## TODO
 * serveur Strasbourg
@@ -48,4 +49,7 @@
 * Additional variables : 2 kinds
 * Variable names plot (wordcloud of variables that characterize cell)
 * data formats (sas, stata..., xls ?)
+* onglet "code" en générant le code reproductible
+* onglet "clusters" : tableau nom + clusters
+* sur camemberts : texte indiquant le nom des observations de la part sous focus
 
