--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@
 * 0-sd variables crash
 * No train when no variables selected
 * Crash when duplicate rownames in data import (when rownames checked)
+* isolate ok.data() in graph panel
 
 ## TODO
 * serveur Strasbourg
@@ -48,6 +49,5 @@
 * Variable names plot (wordcloud of variables that characterize cell)
 * data formats (sas, stata..., xls ?)
 * onglet "code" en générant le code reproductible
-* onglet "clusters" : tableau nom + clusters
 * sur camemberts : texte indiquant le nom des observations de la part sous focus
 
