--- a/TODO
+++ b/TODO
@@ -2,30 +2,30 @@
 * Boxplot, Star, Line : empty cells -> NA
 * Starplot : n'importe quoi, parfois les ~0 sont à l'exterieur des étoiles, problème grille 1D
 * Names plot : enlever ?
-* Data file error messages
 * Crash when only one variable selected
 * Crash when duplicate rownames in data import (when rownames checked)
 
 ## TODO
+* greyscale color
+* camemberts : ajouter % dans le texte
+* Boxplot : option hide outliers
+* Help messages
+* Data file error messages
 * hex grid on pca initialization ?
 * Hitmap : mouse focus cell and polygon
 * Lines : changer le mécanisme de proximité
 * check that sqrt(weights) where weights sum to one is correct
 * serveur Strasbourg
-* greyscale color
 * barplot categorical
-* Help contrast
 * Third contrast option : no normalization
 * Star categorical realValue (ex : frondeur 1.62)
 * Barplot hex norm : 0-1
-* Boplot : option hide outliers
 * SVG save
 * Warning une seule colonne csv
 * File locale
 * save R session
 * isolate train in graph var choice
 * isolate ok.data() in graph panel
-* camemberts : ajouter % dans le texte
 
 ## Wishlist
 * Internationalization
