Fixed dendrogram, implemented Scree plot

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 ## BUGS
 * Crash when only one variable selected
 * Crash when duplicate rownames in data import (when rownames checked)
+* Fix rownames
 
 ## TODO
 * greyscale color
