Bugfix proportion data: kohonen::som distance function to sumofsquares

--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 ## BUGS
 * Boxplot : highlight doesn't work for other cells
 * Boxplot : download doesn't work well
-* % explained variance ? (bad on unscaled canpool6)
 
 ## TODO
+* data import -> data.table::fread
 * About panel
 * Hitmap fill polygon with palette
 * Square barplot to .95 (also too large on CatBarplot with contrast)
